Fill in more sections

--- a/docs/upgrade/0.7.md
+++ b/docs/upgrade/0.7.md
@@ -85,4 +85,32 @@ This makes PyQIR much more powerful and will enable workflows that involve inspe
 This means that the API for `pyqir-parser` had to be completely redesigned, which unfortunately makes upgrading challenging.
 Here are some tips.
 
+### Modules
+
+Use `Module.from_bitcode` or `Module.from_ir` instead of the `QirModule` constructor.
+See [](#ir-and-bitcode-conversion).
+
+### Entry points and interop-friendly functions
+
+Instead of `QirModule.entrypoint_funcs`, `QirModule.interop_funcs`, or `QirModule.get_funcs_by_attr`, filter the `Module.functions` list instead.
+For example:
+
+```python
+entry_point = next(filter(pyqir.is_entry_point, module.functions))
+interops = filter(pyqir.is_interop_friendly, module.functions)
+```
+
+### Instructions
+
 TODO
+
+### Qubit and result IDs
+
+In PyQIR 0.6, `QirQubitConstant` and `QirResultConstant` were subclasses of `QirOperand`.
+Instead, you can try to extract a static qubit or result ID from any value using `pyqir.qubit_id(value)` and `pyqir.result_id(value)`.
+If the value isn't the right kind, it will return `None`.
+
+### Strings
+
+In PyQIR 0.6, you could read a global string constant from a string value using `QirModule.get_global_bytes_value(value)`.
+This is possible now using `pyqir.extract_byte_string(value)`.
