--- a/docs/upgrade/0.7.md
+++ b/docs/upgrade/0.7.md
@@ -102,7 +102,13 @@ interops = filter(pyqir.is_interop_friendly, module.functions)
 
 ### Instructions
 
-TODO
+The instruction class hierarchy was trimmed down significantly.
+Most subclasses of `QirInstr` were removed.
+The surviving subclasses are `Call`, `FCmp`, `ICmp`, `Phi` and `Switch`.
+
+For any other instruction, it should be possible to use the base `Instruction` class to do anything that was previously possible.
+Use the `opcode` property to check what kind of instruction it is, and the `operands` property to read all of the values that the instruction references.
+The `successors` property is a subset of `operands` and contains just the values that are basic blocks, which can be useful to follow control flow with `br` instructions.
 
 ### Qubit and result IDs
 
