Link to parser tests

--- a/docs/upgrade/0.7.md
+++ b/docs/upgrade/0.7.md
@@ -122,3 +122,8 @@ If the value isn't the right kind, it will return `None`.
 
 In PyQIR 0.6, you could read a global string constant from a string value using `QirModule.get_global_bytes_value(value)`.
 This is possible now using `pyqir.extract_byte_string(value)`.
+
+### Examples
+
+To see examples of how the new parser API can be used, take a look at [test_parser.py](https://github.com/qir-alliance/pyqir/blob/53e4aebfdb456e9603fae28543a8391075021a9f/pyqir/tests/test_parser.py).
+You can also compare it with [test_parser_api.py](https://github.com/qir-alliance/pyqir/blob/v0.6.2/pyqir-parser/tests/test_parser_api.py) from PyQIR 0.6 for a before-and-after view of the same test cases using both the old and new APIs.
